@@ -1,3 +1,7 @@
+Fri Mar 26 12:44:08 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* enum.c (Enumerable#each_entry): New method.
+
 Fri Mar 26 04:52:19 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/extconf.rb: fix [ruby-core:28901] [Bug #2997].
